# convey

./: .gitignore  ARCHITECTURE.md  BUILD.md  Cargo.toml  DISTRIBUTION.md  INDEX.md  README.md  SUMMARY.md  entitlements.plist
resources/models/: README.md
scripts/: build_app.sh  download_model.sh  generate_icons.sh  make_dmg.sh
src/: ai.rs  audio.rs  clipboard.rs  database.rs  fn_key_monitor.rs  lib.rs  main.rs  notch.rs  sound.rs  storage.rs  whisper.rs  workflow.rs
src/services/: clipboard.rs  history.rs  mod.rs  recorder.rs  settings.rs
src/ui/: mod.rs  theme.rs
