[package]
name = "convey"
version = "0.1.0"
description = "Convey - Voice transcription app"
authors = ["Naren Naik"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "convey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
cpal = "0.15"
hound = "3.5"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
keyring = "2.3"
rusqlite = { version = "0.31", features = ["bundled"] }
enigo = "0.2"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3.4"
iced = { version = "0.12", features = ["tokio", "canvas", "svg"] }
directories = "5.0"
global-hotkey = "0.7"
once_cell = "1.19"
objc = "0.2"
dispatch = "0.2"
which = "4.4"
core-foundation = "0.9"
core-graphics = "0.23"
